--- a/frontend/view/agente.html
+++ b/frontend/view/agente.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vista Agente</title>
 </head>
 <body>
     <h1>    !!hola agente¡¡</h1>
